Major refactor of browser specific iterables

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -238,6 +238,9 @@
   ],
   "references": [
     {
+      "path": "../alfa-collection"
+    },
+    {
       "path": "../alfa-compatibility"
     },
     {
