--- a/packages/alfa-compatibility/tsconfig.json
+++ b/packages/alfa-compatibility/tsconfig.json
@@ -3,34 +3,28 @@
   "files": [
     "src/browser-specific.ts",
     "src/browsers.ts",
-    "src/every.ts",
     "src/expand-browsers.ts",
     "src/expand-versions.ts",
     "src/features.ts",
-    "src/filter.ts",
-    "src/find.ts",
     "src/get-default-browsers.ts",
     "src/get-feature-support.ts",
-    "src/group-by.ts",
     "src/guards.ts",
     "src/index.ts",
     "src/is-browser-supported.ts",
     "src/is-feature-supported.ts",
-    "src/map.ts",
-    "src/reduce.ts",
-    "src/some.ts",
+    "src/iterable.ts",
+    "src/iterable/filter.ts",
+    "src/iterable/find.ts",
+    "src/iterable/group-by.ts",
+    "src/iterable/map.ts",
+    "src/iterable/reduce.ts",
     "src/supported-browsers.ts",
     "src/types.ts",
-    "src/unwrap.ts",
     "src/with-browsers.ts",
     "test/browser-specific.spec.ts",
-    "test/every.spec.ts",
     "test/guards.spec.ts",
     "test/is-browser-supported.spec.ts",
-    "test/is-feature-supported.spec.ts",
-    "test/map.spec.ts",
-    "test/reduce.spec.ts",
-    "test/some.spec.ts"
+    "test/is-feature-supported.spec.ts"
   ],
   "references": [
     {
