--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -107,6 +107,9 @@
       "path": "../alfa-aria"
     },
     {
+      "path": "../alfa-collection"
+    },
+    {
       "path": "../alfa-compatibility"
     },
     {
