--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -11,6 +11,9 @@
   ],
   "references": [
     {
+      "path": "../alfa-collection"
+    },
+    {
       "path": "../alfa-compatibility"
     },
     {
