--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-aria": "^0.0.0",
+    "@siteimprove/alfa-collection": "^0.0.0",
     "@siteimprove/alfa-compatibility": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
