--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -115,6 +115,7 @@
     "src/features/var.ts",
     "src/features/video.ts",
     "src/features/wbr.ts",
+    "src/get-owner-element.ts",
     "src/get-role-category.ts",
     "src/get-role.ts",
     "src/get-text-alternative.ts",
@@ -225,6 +226,7 @@
     "test/features/select.spec.tsx",
     "test/features/td.spec.tsx",
     "test/features/th.spec.tsx",
+    "test/get-owner-element.spec.tsx",
     "test/get-role-category.spec.tsx",
     "test/get-role.spec.tsx",
     "test/get-text-alternative.spec.tsx",
