--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -3,6 +3,8 @@
   "files": [
     "src/helpers/applicabilities/audio.ts",
     "src/helpers/applicabilities/video.ts",
+    "src/helpers/get-explicit-role.ts",
+    "src/helpers/has-explicit-role.ts",
     "src/helpers/has-language-attribute.ts",
     "src/helpers/has-outcome.ts",
     "src/helpers/is-document-element.ts",
@@ -49,6 +51,7 @@
     "src/sia-r39/rule.ts",
     "src/sia-r4/rule.ts",
     "src/sia-r40/rule.ts",
+    "src/sia-r42/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r6/rule.ts",
     "src/sia-r7/rule.ts",
