Get rid of nested pointer types

--- a/packages/alfa-pointer/tsconfig.json
+++ b/packages/alfa-pointer/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../tsconfig.json",
-  "files": ["src/index.ts", "src/types.ts"],
+  "files": ["src/guards.ts", "src/index.ts", "src/types.ts"],
   "references": [
     {
       "path": "../alfa-test"
