Introduce oracles for custom question/answer resolution

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -5,6 +5,7 @@
     "src/contexts.ts",
     "src/guards.ts",
     "src/index.ts",
+    "src/oracle.ts",
     "src/sort-rules.ts",
     "src/to-json.ts",
     "src/types.ts"
