--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -51,6 +51,7 @@
     "src/sia-r39/rule.ts",
     "src/sia-r4/rule.ts",
     "src/sia-r40/rule.ts",
+    "src/sia-r41/rule.ts",
     "src/sia-r42/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r6/rule.ts",
