Manually include @types/* packages where needed

--- a/packages/alfa-crypto/tsconfig.json
+++ b/packages/alfa-crypto/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "types": ["sjcl"]
+  },
   "files": [
     "src/get-hash.ts",
     "src/index.ts",
