--- a/packages/alfa-scrape/tsconfig.json
+++ b/packages/alfa-scrape/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "types": ["node", "puppeteer"]
+  },
   "files": ["src/index.ts", "src/scraper.ts", "src/virtualize.ts"],
   "references": [
     {
