--- a/packages/alfa-chai/package.json
+++ b/packages/alfa-chai/package.json
@@ -34,7 +34,7 @@
     "chai": "^4.2.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0",
-    "@siteimprove/alfa-jsx": "^0.0.0"
+    "@siteimprove/alfa-jsx": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
