--- a/packages/alfa-react/tsconfig.json
+++ b/packages/alfa-react/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "types": ["react"]
+  },
   "files": [
     "chai.ts",
     "jest.ts",
