--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     }
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "docs/**/*"
   ],
   "devDependencies": {
     "@types/node": "^12.0.2",
