--- a/packages/alfa-angular/package.json
+++ b/packages/alfa-angular/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-react",
+  "name": "@siteimprove/alfa-angular",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -31,6 +31,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@angular/core": "^7.2.15",
     "@siteimprove/alfa-chai": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-jasmine": "^0.0.0",
@@ -38,8 +39,8 @@
     "@siteimprove/alfa-should": "^0.0.0",
     "@siteimprove/alfa-unexpected": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
-    "@types/react": "^16.8.4",
-    "react": "^16.8.2"
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
