--- a/packages/alfa-enzyme/package.json
+++ b/packages/alfa-enzyme/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@siteimprove/alfa-chai": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-jasmine": "^0.0.0",
     "@siteimprove/alfa-jest": "^0.0.0",
     "@siteimprove/alfa-react": "^0.0.0",
     "@siteimprove/alfa-should": "^0.0.0",
