--- a/packages/alfa-jasmine/package.json
+++ b/packages/alfa-jasmine/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-react",
+  "name": "@siteimprove/alfa-jasmine",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -25,23 +25,17 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
-    "*.js",
-    "*.d.ts",
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-jasmine": "^0.0.0",
-    "@siteimprove/alfa-jest": "^0.0.0",
-    "@siteimprove/alfa-should": "^0.0.0",
-    "@siteimprove/alfa-unexpected": "^0.0.0",
-    "@siteimprove/alfa-util": "^0.0.0",
-    "@types/react": "^16.8.4",
-    "react": "^16.8.2"
+    "@types/jasmine": "^3.3.12",
+    "jasmine": "^3.4.0"
   },
   "devDependencies": {
+    "@siteimprove/alfa-jsx": "^0.0.0",
     "@siteimprove/alfa-test": "^0.0.0"
   }
 }
