--- a/packages/alfa-assert/tsconfig.json
+++ b/packages/alfa-assert/tsconfig.json
@@ -4,7 +4,8 @@
     "src/assertion.ts",
     "src/expect.ts",
     "src/index.ts",
-    "src/is-element.ts"
+    "src/is-element.ts",
+    "src/rules.ts"
   ],
   "references": [
     {
