--- a/packages/alfa-cheerio/package.json
+++ b/packages/alfa-cheerio/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-enzyme",
+  "name": "@siteimprove/alfa-cheerio",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -32,17 +32,14 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-chai": "^0.0.0",
-    "@siteimprove/alfa-cheerio": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-jasmine": "^0.0.0",
     "@siteimprove/alfa-jest": "^0.0.0",
-    "@siteimprove/alfa-react": "^0.0.0",
     "@siteimprove/alfa-should": "^0.0.0",
     "@siteimprove/alfa-unexpected": "^0.0.0",
-    "@types/enzyme": "^3.1.18",
-    "@types/react": "^16.8.4",
-    "enzyme": "^3.7.0",
-    "react": "^16.8.2"
+    "@siteimprove/alfa-util": "^0.0.0",
+    "@types/cheerio": "^0.22.11",
+    "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
