--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -7,6 +7,7 @@
     { "path": "alfa-aria" },
     { "path": "alfa-assert" },
     { "path": "alfa-chai" },
+    { "path": "alfa-cheerio" },
     { "path": "alfa-collection" },
     { "path": "alfa-compatibility" },
     { "path": "alfa-crypto" },
