--- a/packages/alfa-cheerio/tsconfig.json
+++ b/packages/alfa-cheerio/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "files": [
-    "src/from-cheerio-element.ts",
+    "src/from-cheerio-wrapper.ts",
     "src/index.ts",
-    "src/is-cheerio-element.ts",
+    "src/is-cheerio-wrapper.ts",
     "src/types.ts"
   ],
   "references": [
