--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -32,6 +32,7 @@
     { "path": "alfa-unexpected" },
     { "path": "alfa-unicode" },
     { "path": "alfa-util" },
+    { "path": "alfa-vue" },
     { "path": "alfa-wcag" },
     { "path": "alfa-xpath" },
     { "path": "eslint-plugin-alfa" }
