Enable ES module interop for all packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "composite": true,
     "declaration": true,
     "declarationMap": true,
+    "esModuleInterop": true,
     "incremental": true,
     "jsx": "react",
     "jsxFactory": "jsx",
