--- a/packages/alfa-chai/package.json
+++ b/packages/alfa-chai/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@types/chai": "^4.1.7",
     "chai": "^4.2.0"
   },
   "devDependencies": {
