--- a/packages/alfa-highlight/package.json
+++ b/packages/alfa-highlight/package.json
@@ -26,7 +26,8 @@
   "types": "src/index.d.ts",
   "files": [
     "src/**/*.js",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "types/**/*.d.ts"
   ],
   "dependencies": {
     "chalk": "^2.4.2",
