Add example of page testing using Cypress

--- a/docs/examples/tsconfig.json
+++ b/docs/examples/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../tsconfig.json",
   "files": [],
-  "references": [{ "path": "component-testing" }]
+  "references": [{ "path": "component-testing" }, { "path": "page-testing" }]
 }
