--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -12,6 +12,7 @@
     { "path": "alfa-compatibility" },
     { "path": "alfa-crypto" },
     { "path": "alfa-css" },
+    { "path": "alfa-cypress" },
     { "path": "alfa-device" },
     { "path": "alfa-dom" },
     { "path": "alfa-enzyme" },
@@ -21,6 +22,7 @@
     { "path": "alfa-iana" },
     { "path": "alfa-jasmine" },
     { "path": "alfa-jest" },
+    { "path": "alfa-jquery" },
     { "path": "alfa-json-ld" },
     { "path": "alfa-jsx" },
     { "path": "alfa-lang" },
