--- a/packages/alfa-jest/tsconfig.json
+++ b/packages/alfa-jest/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../tsconfig.json",
-  "files": ["src/create-jest-plugin.ts", "src/index.ts", "plugin.ts"],
+  "files": ["plugin.ts", "src/create-jest-plugin.ts", "src/index.ts"],
   "references": [
     {
       "path": "../alfa-assert"
