--- a/packages/alfa-cypress/package.json
+++ b/packages/alfa-cypress/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-chai": "^0.0.0",
-    "@siteimprove/alfa-jquery": "^0.0.0"
+    "@siteimprove/alfa-jquery": "^0.0.0",
+    "cypress": "^3.3.1"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
