Make things compile against TypeScript 3.5

--- a/packages/alfa-util/tsconfig.json
+++ b/packages/alfa-util/tsconfig.json
@@ -9,6 +9,7 @@
     "src/index.ts",
     "src/number/clamp.ts",
     "src/object/keys.ts",
+    "src/object/set.ts",
     "src/object/values.ts",
     "src/option.ts",
     "src/result.ts",
