--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -140,6 +140,9 @@
     "src/roles/abstract/structure.ts",
     "src/roles/abstract/widget.ts",
     "src/roles/abstract/window.ts",
+    "src/roles/graphics/document.ts",
+    "src/roles/graphics/object.ts",
+    "src/roles/graphics/symbol.ts",
     "src/roles/landmarks/banner.ts",
     "src/roles/landmarks/complementary.ts",
     "src/roles/landmarks/content-info.ts",
