--- a/packages/alfa-cypress/package.json
+++ b/packages/alfa-cypress/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-jquery": "^0.0.0",
     "cypress": "^3.3.1"
   },
