--- a/packages/alfa-cypress/tsconfig.json
+++ b/packages/alfa-cypress/tsconfig.json
@@ -14,6 +14,9 @@
       "path": "../alfa-chai"
     },
     {
+      "path": "../alfa-dom"
+    },
+    {
       "path": "../alfa-jquery"
     },
     {
