Pull `StyleTree` into separate module

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -68,6 +68,7 @@
     "src/properties/width/property.ts",
     "src/properties/width/types.ts",
     "src/resolvers.ts",
+    "src/style-tree.ts",
     "src/style.ts",
     "src/types.ts",
     "src/units.ts",
