Progress on initial version of CLI

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -8,6 +8,7 @@
     { "path": "alfa-assert" },
     { "path": "alfa-chai" },
     { "path": "alfa-cheerio" },
+    { "path": "alfa-cli" },
     { "path": "alfa-collection" },
     { "path": "alfa-compatibility" },
     { "path": "alfa-crypto" },
