some extra stuff. Still not building correctly

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -3,118 +3,122 @@
   "files": [
     "src/attributes.ts",
     "src/features.ts",
-    "src/features/a.ts",
-    "src/features/abbr.ts",
-    "src/features/address.ts",
-    "src/features/area.ts",
-    "src/features/article.ts",
-    "src/features/aside.ts",
-    "src/features/audio.ts",
-    "src/features/b.ts",
-    "src/features/base.ts",
-    "src/features/bdi.ts",
-    "src/features/bdo.ts",
-    "src/features/blockquote.ts",
-    "src/features/body.ts",
-    "src/features/br.ts",
-    "src/features/button.ts",
-    "src/features/canvas.ts",
-    "src/features/caption.ts",
-    "src/features/cite.ts",
-    "src/features/code.ts",
-    "src/features/col-group.ts",
-    "src/features/col.ts",
-    "src/features/datalist.ts",
-    "src/features/dd.ts",
-    "src/features/del.ts",
-    "src/features/details.ts",
-    "src/features/dfn.ts",
-    "src/features/dialog.ts",
-    "src/features/div.ts",
-    "src/features/dl.ts",
-    "src/features/dt.ts",
-    "src/features/em.ts",
-    "src/features/embed.ts",
-    "src/features/fieldset.ts",
-    "src/features/fig-caption.ts",
-    "src/features/figure.ts",
-    "src/features/footer.ts",
-    "src/features/form.ts",
-    "src/features/h1.ts",
-    "src/features/h2.ts",
-    "src/features/h3.ts",
-    "src/features/h4.ts",
-    "src/features/h5.ts",
-    "src/features/h6.ts",
-    "src/features/head.ts",
-    "src/features/header.ts",
-    "src/features/hr.ts",
     "src/features/html.ts",
-    "src/features/i.ts",
-    "src/features/iframe.ts",
-    "src/features/img.ts",
-    "src/features/input.ts",
-    "src/features/ins.ts",
-    "src/features/kbd.ts",
-    "src/features/keygen.ts",
-    "src/features/label.ts",
-    "src/features/legend.ts",
-    "src/features/li.ts",
-    "src/features/link.ts",
-    "src/features/main.ts",
-    "src/features/map.ts",
-    "src/features/mark.ts",
-    "src/features/math.ts",
-    "src/features/menu-item.ts",
-    "src/features/menu.ts",
-    "src/features/meta.ts",
-    "src/features/nav.ts",
-    "src/features/noscript.ts",
-    "src/features/object.ts",
-    "src/features/ol.ts",
-    "src/features/optgroup.ts",
-    "src/features/option.ts",
-    "src/features/output.ts",
-    "src/features/p.ts",
-    "src/features/param.ts",
-    "src/features/picture.ts",
-    "src/features/pre.ts",
-    "src/features/progress.ts",
-    "src/features/q.ts",
-    "src/features/rp.ts",
-    "src/features/rt.ts",
-    "src/features/ruby.ts",
-    "src/features/s.ts",
-    "src/features/samp.ts",
-    "src/features/script.ts",
-    "src/features/section.ts",
-    "src/features/select.ts",
-    "src/features/small.ts",
-    "src/features/source.ts",
-    "src/features/span.ts",
-    "src/features/strong.ts",
-    "src/features/style.ts",
-    "src/features/sub.ts",
-    "src/features/summary.ts",
-    "src/features/sup.ts",
+    "src/features/html/a.ts",
+    "src/features/html/abbr.ts",
+    "src/features/html/address.ts",
+    "src/features/html/area.ts",
+    "src/features/html/article.ts",
+    "src/features/html/aside.ts",
+    "src/features/html/audio.ts",
+    "src/features/html/b.ts",
+    "src/features/html/base.ts",
+    "src/features/html/bdi.ts",
+    "src/features/html/bdo.ts",
+    "src/features/html/blockquote.ts",
+    "src/features/html/body.ts",
+    "src/features/html/br.ts",
+    "src/features/html/button.ts",
+    "src/features/html/canvas.ts",
+    "src/features/html/caption.ts",
+    "src/features/html/cite.ts",
+    "src/features/html/code.ts",
+    "src/features/html/col-group.ts",
+    "src/features/html/col.ts",
+    "src/features/html/datalist.ts",
+    "src/features/html/dd.ts",
+    "src/features/html/del.ts",
+    "src/features/html/details.ts",
+    "src/features/html/dfn.ts",
+    "src/features/html/dialog.ts",
+    "src/features/html/div.ts",
+    "src/features/html/dl.ts",
+    "src/features/html/dt.ts",
+    "src/features/html/em.ts",
+    "src/features/html/embed.ts",
+    "src/features/html/fieldset.ts",
+    "src/features/html/fig-caption.ts",
+    "src/features/html/figure.ts",
+    "src/features/html/footer.ts",
+    "src/features/html/form.ts",
+    "src/features/html/h1.ts",
+    "src/features/html/h2.ts",
+    "src/features/html/h3.ts",
+    "src/features/html/h4.ts",
+    "src/features/html/h5.ts",
+    "src/features/html/h6.ts",
+    "src/features/html/head.ts",
+    "src/features/html/header.ts",
+    "src/features/html/hr.ts",
+    "src/features/html/html.ts",
+    "src/features/html/i.ts",
+    "src/features/html/iframe.ts",
+    "src/features/html/img.ts",
+    "src/features/html/input.ts",
+    "src/features/html/ins.ts",
+    "src/features/html/kbd.ts",
+    "src/features/html/keygen.ts",
+    "src/features/html/label.ts",
+    "src/features/html/legend.ts",
+    "src/features/html/li.ts",
+    "src/features/html/link.ts",
+    "src/features/html/main.ts",
+    "src/features/html/map.ts",
+    "src/features/html/mark.ts",
+    "src/features/html/math.ts",
+    "src/features/html/menu-item.ts",
+    "src/features/html/menu.ts",
+    "src/features/html/meta.ts",
+    "src/features/html/nav.ts",
+    "src/features/html/noscript.ts",
+    "src/features/html/object.ts",
+    "src/features/html/ol.ts",
+    "src/features/html/optgroup.ts",
+    "src/features/html/option.ts",
+    "src/features/html/output.ts",
+    "src/features/html/p.ts",
+    "src/features/html/param.ts",
+    "src/features/html/picture.ts",
+    "src/features/html/pre.ts",
+    "src/features/html/progress.ts",
+    "src/features/html/q.ts",
+    "src/features/html/rp.ts",
+    "src/features/html/rt.ts",
+    "src/features/html/ruby.ts",
+    "src/features/html/s.ts",
+    "src/features/html/samp.ts",
+    "src/features/html/script.ts",
+    "src/features/html/section.ts",
+    "src/features/html/select.ts",
+    "src/features/html/small.ts",
+    "src/features/html/source.ts",
+    "src/features/html/span.ts",
+    "src/features/html/strong.ts",
+    "src/features/html/style.ts",
+    "src/features/html/sub.ts",
+    "src/features/html/summary.ts",
+    "src/features/html/sup.ts",
+    "src/features/html/svg.ts",
+    "src/features/html/table.ts",
+    "src/features/html/tbody.ts",
+    "src/features/html/td.ts",
+    "src/features/html/template.ts",
+    "src/features/html/textarea.ts",
+    "src/features/html/tfoot.ts",
+    "src/features/html/th.ts",
+    "src/features/html/thead.ts",
+    "src/features/html/time.ts",
+    "src/features/html/title.ts",
+    "src/features/html/tr.ts",
+    "src/features/html/track.ts",
+    "src/features/html/u.ts",
+    "src/features/html/ul.ts",
+    "src/features/html/var.ts",
+    "src/features/html/video.ts",
+    "src/features/html/wbr.ts",
     "src/features/svg.ts",
-    "src/features/table.ts",
-    "src/features/tbody.ts",
-    "src/features/td.ts",
-    "src/features/template.ts",
-    "src/features/textarea.ts",
-    "src/features/tfoot.ts",
-    "src/features/th.ts",
-    "src/features/thead.ts",
-    "src/features/time.ts",
-    "src/features/title.ts",
-    "src/features/tr.ts",
-    "src/features/track.ts",
-    "src/features/u.ts",
-    "src/features/ul.ts",
-    "src/features/var.ts",
-    "src/features/video.ts",
-    "src/features/wbr.ts",
+    "src/features/svg/a.ts",
+    "src/features/svg/animate.ts",
     "src/get-owner-element.ts",
     "src/get-role-category.ts",
     "src/get-role.ts",
@@ -213,22 +217,22 @@
     "src/roles/window/alert-dialog.ts",
     "src/roles/window/dialog.ts",
     "src/types.ts",
-    "test/features/a.spec.tsx",
-    "test/features/area.spec.tsx",
-    "test/features/footer.spec.tsx",
-    "test/features/form.spec.tsx",
-    "test/features/header.spec.tsx",
-    "test/features/img.spec.tsx",
-    "test/features/input.spec.tsx",
-    "test/features/li.spec.tsx",
-    "test/features/link.spec.tsx",
-    "test/features/menu.spec.tsx",
-    "test/features/menuitem.spec.tsx",
-    "test/features/option.spec.tsx",
-    "test/features/section.spec.tsx",
-    "test/features/select.spec.tsx",
-    "test/features/td.spec.tsx",
-    "test/features/th.spec.tsx",
+    "test/features/html/a.spec.tsx",
+    "test/features/html/area.spec.tsx",
+    "test/features/html/footer.spec.tsx",
+    "test/features/html/form.spec.tsx",
+    "test/features/html/header.spec.tsx",
+    "test/features/html/img.spec.tsx",
+    "test/features/html/input.spec.tsx",
+    "test/features/html/li.spec.tsx",
+    "test/features/html/link.spec.tsx",
+    "test/features/html/menu.spec.tsx",
+    "test/features/html/menuitem.spec.tsx",
+    "test/features/html/option.spec.tsx",
+    "test/features/html/section.spec.tsx",
+    "test/features/html/select.spec.tsx",
+    "test/features/html/td.spec.tsx",
+    "test/features/html/th.spec.tsx",
     "test/get-owner-element.spec.tsx",
     "test/get-role-category.spec.tsx",
     "test/get-role.spec.tsx",
