--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -4,6 +4,7 @@
     "src/alphabet.ts",
     "src/converters.ts",
     "src/escape.ts",
+    "src/grammars/child-index.ts",
     "src/grammars/declaration.ts",
     "src/grammars/media.ts",
     "src/grammars/rule.ts",
