Add missing files to TypeScript configs

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -118,7 +118,82 @@
     "src/features/html/wbr.ts",
     "src/features/svg.ts",
     "src/features/svg/a.ts",
+    "src/features/svg/animate-motion.ts",
+    "src/features/svg/animate-transform.ts",
     "src/features/svg/animate.ts",
+    "src/features/svg/audio.ts",
+    "src/features/svg/canvas.ts",
+    "src/features/svg/circle.ts",
+    "src/features/svg/clip-path.ts",
+    "src/features/svg/cursor.ts",
+    "src/features/svg/defs.ts",
+    "src/features/svg/desc.ts",
+    "src/features/svg/discard.ts",
+    "src/features/svg/ellipse.ts",
+    "src/features/svg/fe-blend.ts",
+    "src/features/svg/fe-color-matrix.ts",
+    "src/features/svg/fe-component-transfer.ts",
+    "src/features/svg/fe-composite.ts",
+    "src/features/svg/fe-convolve-matrix.ts",
+    "src/features/svg/fe-diffuse-lighting.ts",
+    "src/features/svg/fe-displacement-map.ts",
+    "src/features/svg/fe-distant-light.ts",
+    "src/features/svg/fe-drop-shadow.ts",
+    "src/features/svg/fe-flood.ts",
+    "src/features/svg/fe-func-a.ts",
+    "src/features/svg/fe-func-b.ts",
+    "src/features/svg/fe-func-g.ts",
+    "src/features/svg/fe-func-r.ts",
+    "src/features/svg/fe-gaussian-blur.ts",
+    "src/features/svg/fe-image.ts",
+    "src/features/svg/fe-merge-node.ts",
+    "src/features/svg/fe-merge.ts",
+    "src/features/svg/fe-morphology.ts",
+    "src/features/svg/fe-offset.ts",
+    "src/features/svg/fe-point-light.ts",
+    "src/features/svg/fe-specular-lighting.ts",
+    "src/features/svg/fe-spot-light.ts",
+    "src/features/svg/fe-tile.ts",
+    "src/features/svg/fe-turbulence.ts",
+    "src/features/svg/filter.ts",
+    "src/features/svg/foreign-object.ts",
+    "src/features/svg/g.ts",
+    "src/features/svg/hatch-path.ts",
+    "src/features/svg/hatch.ts",
+    "src/features/svg/iframe.ts",
+    "src/features/svg/image.ts",
+    "src/features/svg/line.ts",
+    "src/features/svg/linear-gradient.ts",
+    "src/features/svg/marker.ts",
+    "src/features/svg/mask.ts",
+    "src/features/svg/mesh-patch.ts",
+    "src/features/svg/mesh-row.ts",
+    "src/features/svg/mesh.ts",
+    "src/features/svg/metadata.ts",
+    "src/features/svg/mpath.ts",
+    "src/features/svg/path.ts",
+    "src/features/svg/pattern.ts",
+    "src/features/svg/polygon.ts",
+    "src/features/svg/polyline.ts",
+    "src/features/svg/radial-gradient.ts",
+    "src/features/svg/rect.ts",
+    "src/features/svg/script.ts",
+    "src/features/svg/set.ts",
+    "src/features/svg/solid-color.ts",
+    "src/features/svg/source.ts",
+    "src/features/svg/stop.ts",
+    "src/features/svg/style.ts",
+    "src/features/svg/svg.ts",
+    "src/features/svg/switch.ts",
+    "src/features/svg/symbol.ts",
+    "src/features/svg/text-path.ts",
+    "src/features/svg/text.ts",
+    "src/features/svg/title.ts",
+    "src/features/svg/track.ts",
+    "src/features/svg/tspan.ts",
+    "src/features/svg/use.ts",
+    "src/features/svg/video.ts",
+    "src/features/svg/view.ts",
     "src/get-owner-element.ts",
     "src/get-role-category.ts",
     "src/get-role.ts",
@@ -233,6 +308,7 @@
     "test/features/html/select.spec.tsx",
     "test/features/html/td.spec.tsx",
     "test/features/html/th.spec.tsx",
+    "test/features/svg/a.spec.tsx",
     "test/get-owner-element.spec.tsx",
     "test/get-role-category.spec.tsx",
     "test/get-role.spec.tsx",
