Bail out on non-required attributes in SIA-R19

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -7,8 +7,11 @@
     "src/helpers/has-explicit-role.ts",
     "src/helpers/has-language-attribute.ts",
     "src/helpers/has-outcome.ts",
+    "src/helpers/is-allowed-attribute.ts",
     "src/helpers/is-document-element.ts",
     "src/helpers/is-perceivable.ts",
+    "src/helpers/is-required-attribute.ts",
+    "src/helpers/is-supported-attribute.ts",
     "src/index.ts",
     "src/rules.ts",
     "src/sia-r1/locales/en.ts",
