--- a/package.json
+++ b/package.json
@@ -43,11 +43,10 @@
     "@types/prettier": "^1.16.1",
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
-    "gaze": "^1.1.3",
+    "chokidar": "^3.0.2",
     "husky": "^3.0.2",
     "ignore": "^5.0.5",
     "prettier": "1.18.2",
-    "pretty-ms": "^5.0.0",
     "source-map": "^0.7.3",
     "source-map-support": "^0.5.10",
     "tslint": "^5.12.1",
