--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -11,9 +11,7 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: |
-        npm install -g yarn
-    - run: |
-        yarn install --ignore-scripts
-        yarn prepare
-        yarn test
+    - run: npm install -g yarn
+    - run: yarn install --ignore-scripts
+    - run: yarn prepare
+    - run: yarn test
