--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -33,6 +33,7 @@
     "@siteimprove/alfa-aria": "^0.0.0",
     "@siteimprove/alfa-collection": "^0.0.0",
     "@siteimprove/alfa-compatibility": "^0.0.0",
+    "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-iana": "^0.0.0",
