--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -57,6 +57,7 @@
     "src/sia-r40/rule.ts",
     "src/sia-r41/rule.ts",
     "src/sia-r42/rule.ts",
+    "src/sia-r44/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r6/rule.ts",
     "src/sia-r7/rule.ts",
@@ -119,6 +120,9 @@
     },
     {
       "path": "../alfa-compatibility"
+    },
+    {
+      "path": "../alfa-css"
     },
     {
       "path": "../alfa-device"
