Add SIA-R47 to rules

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -59,6 +59,7 @@
     "src/sia-r41/rule.ts",
     "src/sia-r42/rule.ts",
     "src/sia-r44/rule.ts",
+    "src/sia-r47/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r6/rule.ts",
     "src/sia-r7/rule.ts",
@@ -103,6 +104,7 @@
     "test/sia-r39/rule.spec.tsx",
     "test/sia-r4/rule.spec.tsx",
     "test/sia-r40/rule.spec.tsx",
+    "test/sia-r47/rule.spec.tsx",
     "test/sia-r5/rule.spec.tsx",
     "test/sia-r6/rule.spec.tsx",
     "test/sia-r7/rule.spec.tsx",
