--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -114,6 +114,9 @@
       "path": "../alfa-act"
     },
     {
+      "path": "../alfa-affine"
+    },
+    {
       "path": "../alfa-aria"
     },
     {
