--- a/packages/alfa-json-ld/package.json
+++ b/packages/alfa-json-ld/package.json
@@ -15,6 +15,7 @@
   ],
   "contributors": [
     "Búgvi Benjamin Magnussen <bbm@siteimprove.com>",
+    "Jean-Yves Moyen <jym@siteimprove.com>",
     "Kasper Kronborg Isager <kki@siteimprove.com>",
     "Niclas Hedam <nhe@siteimprove.com>",
     "Per Jakobsen <pja@siteimprove.com>",
