--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chokidar": "^3.0.2",
     "husky": "^3.0.2",
     "ignore": "^5.0.5",
+    "lerna": "^3.16.4",
     "prettier": "1.18.2",
     "source-map": "^0.7.3",
     "source-map-support": "^0.5.10",
