--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -13,6 +13,7 @@
     "src/helpers/is-perceivable.ts",
     "src/helpers/is-required-attribute.ts",
     "src/helpers/is-supported-attribute.ts",
+    "src/helpers/predicate-builder.ts",
     "src/index.ts",
     "src/rules.ts",
     "src/sia-r1/locales/en.ts",
@@ -70,6 +71,7 @@
     "test/helpers/has-language-attribute.spec.tsx",
     "test/helpers/is-document-element.spec.tsx",
     "test/helpers/outcome.ts",
+    "test/helpers/predicate-builder.tsx",
     "test/sia-r1/rule.spec.tsx",
     "test/sia-r10/rule.spec.tsx",
     "test/sia-r11/rule.spec.tsx",
