--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -36,6 +36,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-act": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-rules": "^0.0.0",
     "@siteimprove/alfa-scrape": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
