Add SIA-R48, SIA-R49, and SIA-R50

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -60,7 +60,10 @@
     "src/sia-r42/rule.ts",
     "src/sia-r44/rule.ts",
     "src/sia-r47/rule.ts",
+    "src/sia-r48/rule.ts",
+    "src/sia-r49/rule.ts",
     "src/sia-r5/rule.ts",
+    "src/sia-r50/rule.ts",
     "src/sia-r6/rule.ts",
     "src/sia-r7/rule.ts",
     "src/sia-r8/rule.ts",
