Add missing project reference

--- a/packages/alfa-cli/tsconfig.json
+++ b/packages/alfa-cli/tsconfig.json
@@ -17,6 +17,9 @@
       "path": "../alfa-act"
     },
     {
+      "path": "../alfa-device"
+    },
+    {
       "path": "../alfa-rules"
     },
     {
