--- a/packages/alfa-compatibility/tsconfig.json
+++ b/packages/alfa-compatibility/tsconfig.json
@@ -13,6 +13,7 @@
     "src/is-browser-supported.ts",
     "src/is-feature-supported.ts",
     "src/iterable.ts",
+    "src/iterable/binary-operation.ts",
     "src/iterable/filter.ts",
     "src/iterable/find.ts",
     "src/iterable/group-by.ts",
